Sign in & sign out

--- a/view/pages/about.pug
+++ b/view/pages/about.pug
@@ -12,7 +12,10 @@ block content
           td(data-label='fname') #{test.fname}
           td(data-label='lname') #{test.lname}
     h1 About
-    
+    h1 #{loggedin}
+    h1 #{fname}
+    h1 #{lname}
+    h1 #{uid}
     h1 Timesheets
     form(ref='uploadForm'  
         id='uploadForm'  
