--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,5 @@
-/* Pauls awesome mixin */
-@-webkit-keyframes animParticle {
-  from {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  to {
-    -webkit-transform: translateY(-2560px);
-            transform: translateY(-2560px);
-  }
-}
-@keyframes animParticle {
-  from {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  to {
-    -webkit-transform: translateY(-2560px);
-            transform: translateY(-2560px);
-  }
-}
-
 *, *:before, *:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -46,7 +23,6 @@ a {
   text-align: center;
   padding-bottom: 3em;
 }
-
 .site__content {
   width: 100%;
   height: 100%;
@@ -68,30 +44,25 @@ table {
   width: 100%;
   table-layout: fixed;
 }
-
 table caption {
   font-size: 1.5em;
-  margin: .5em 0 .75em;
+  margin: 0.5em 0 0.75em;
 }
-
 table tr {
   background-color: rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
-  padding: .35em;
+  padding: 0.35em;
 }
-
 table th, table td {
-  padding: .625em;
+  padding: 0.625em;
   text-align: center;
   word-wrap: break-word;
 }
-
 table th {
-  font-size: .85em;
-  letter-spacing: .1em;
+  font-size: 0.85em;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
-
 table tbody tr:nth-child(odd) {
   background-color: #ebf5fa;
 }
@@ -99,11 +70,9 @@ table tbody tr:nth-child(odd) {
 .partial table {
   border: 0;
 }
-
 .partial table caption {
   font-size: 1.3em;
 }
-
 .partial table thead {
   border: none;
   clip: rect(0 0 0 0);
@@ -114,32 +83,27 @@ table tbody tr:nth-child(odd) {
   position: absolute;
   width: 1px;
 }
-
 .partial table tr {
   border-bottom: 3px solid #ddd;
   display: block;
-  margin-bottom: .625em;
+  margin-bottom: 0.625em;
 }
-
 .partial table td {
   background-color: #ebf5fa;
   border-bottom: 1px solid #ddd;
   display: block;
-  font-size: .8em;
+  font-size: 0.8em;
   text-align: right;
 }
-
 .partial table td::before {
   content: attr(data-label);
   float: left;
   font-weight: bold;
   text-transform: uppercase;
 }
-
 .partial table td:last-child {
   border-bottom: 0;
 }
-
 .partial table tbody td:nth-child(odd) {
   background-color: #ebebeb;
 }
@@ -164,12 +128,12 @@ table tbody tr:nth-child(odd) {
   table tr {
     border-bottom: 3px solid #ddd;
     display: block;
-    margin-bottom: .625em;
+    margin-bottom: 0.625em;
   }
   table td {
     border-bottom: 1px solid #ddd;
     display: block;
-    font-size: .8em;
+    font-size: 0.8em;
     text-align: right;
   }
   table td::before {
@@ -182,4 +146,430 @@ table tbody tr:nth-child(odd) {
     border-bottom: 0;
   }
 }
-/*# sourceMappingURL=main.css.map */
+.messageBox-error {
+  padding: 20px;
+  margin: auto;
+  opacity: 80%;
+  width: 50%;
+  background-color: #c74e54;
+  border-radius: 0em 0em 1em 0em;
+  position: absolute;
+}
+
+.messageBox-success {
+  padding: 20px;
+  margin: auto;
+  opacity: 80%;
+  width: 50%;
+  background-color: #64c74e;
+  border-radius: 0em 0em 1em 0em;
+  position: absolute;
+  position: relative;
+  margin: 0 auto;
+}
+.menu {
+  margin: 0;
+  padding: 0;
+}
+.menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+#cssmenu {
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.menu {
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+}
+.menu li {
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+}
+.menu li a {
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+}
+
+#head-mobile {
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+}
+
+#cssmenu {
+  font-family: sans-serif;
+  background: #333;
+}
+#cssmenu:after, #cssmenu > ul:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+#cssmenu #head-mobile {
+  display: none;
+}
+#cssmenu > ul > li {
+  float: left;
+}
+#cssmenu > ul > li > a {
+  padding: 17px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #ddd;
+  font-weight: 700;
+}
+#cssmenu > ul > li:hover > a {
+  color: #fff;
+}
+#cssmenu ul li.active {
+  background: #2b2e6b !important;
+  transition: background 0.1s ease;
+}
+#cssmenu ul li.active a {
+  color: #fff;
+}
+#cssmenu ul li.active:hover {
+  background: #2b2e6b !important;
+  transition: background 0.1s ease;
+}
+#cssmenu ul li.has-sub.active:hover {
+  background: #2b2e6b !important;
+  transition: background 0.1s ease;
+}
+#cssmenu ul ul {
+  position: absolute;
+  left: -9999px;
+}
+#cssmenu ul ul li {
+  height: 0;
+  -webkit-transition: all 0.1s ease;
+  -ms-transition: all 0.1s ease;
+  background: #333;
+  transition: all 0.1s ease;
+}
+#cssmenu > ul > li:hover {
+  background: #2b2e6b !important;
+  transition: background 0.1s ease;
+}
+#cssmenu > ul > li.has-sub > a {
+  padding-right: 30px;
+}
+#cssmenu > ul > li.has-sub > a:after {
+  position: absolute;
+  top: 22px;
+  right: 11px;
+  width: 8px;
+  height: 2px;
+  display: block;
+  background: #ddd;
+  content: "";
+}
+#cssmenu > ul > li.has-sub > a:before {
+  position: absolute;
+  top: 19px;
+  right: 14px;
+  display: block;
+  width: 2px;
+  height: 8px;
+  background: #ddd;
+  content: "";
+  transition: all 0.1s ease;
+}
+#cssmenu > ul > li.has-sub:hover > a:before {
+  top: 23px;
+  height: 0;
+}
+#cssmenu li:hover > ul {
+  left: auto;
+}
+#cssmenu li:hover > ul > li {
+  height: 35px;
+}
+#cssmenu ul ul ul {
+  margin-left: 100%;
+  top: 0;
+}
+#cssmenu ul ul li a {
+  border-bottom: 1px solid rgba(150, 150, 150, 0.15);
+  padding: 11px 15px;
+  width: 170px;
+  font-size: 12px;
+  text-decoration: none;
+  color: #ddd;
+  font-weight: 400;
+}
+#cssmenu ul ul li:last-child > a, #cssmenu ul ul li.last-item > a {
+  border-bottom: 0;
+}
+#cssmenu ul ul li:hover > a, #cssmenu ul ul li a:hover {
+  color: black;
+  background-color: rgba(238, 238, 238, 0.65);
+}
+#cssmenu ul ul li.has-sub > a:after {
+  position: absolute;
+  top: 16px;
+  right: 11px;
+  width: 8px;
+  height: 2px;
+  display: block;
+  background: #ddd;
+  content: "";
+}
+#cssmenu ul ul li.has-sub > a:before {
+  position: absolute;
+  top: 13px;
+  right: 14px;
+  display: block;
+  width: 2px;
+  height: 8px;
+  background: #ddd;
+  content: "";
+  transition: all 0.1s ease;
+}
+#cssmenu ul ul li.has-sub:hover {
+  background: #363636;
+}
+#cssmenu ul ul > li.has-sub:hover > a:before {
+  top: 17px;
+  height: 0;
+}
+#cssmenu ul li.has-sub ul li.has-sub ul li:hover {
+  background: #363636;
+}
+#cssmenu ul ul ul li.active a {
+  border-left: 1px solid #333;
+}
+#cssmenu > ul > li.has-sub > ul > li.active > a, #cssmenu > ul ul > li.has-sub > ul > li.active > a {
+  border-top: 1px solid #333;
+}
+
+@media screen and (max-width: 700px) {
+  .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 46px;
+    text-align: center;
+    padding: 10px 0 0 0;
+    float: none;
+  }
+
+  .logo2 {
+    display: none;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  #cssmenu {
+    width: 100%;
+  }
+  #cssmenu ul {
+    width: 100%;
+    display: none;
+  }
+  #cssmenu ul li {
+    width: 100%;
+    border-top: 1px solid #444;
+  }
+  #cssmenu ul li:hover {
+    background: #363636;
+  }
+  #cssmenu ul ul li {
+    height: auto;
+  }
+  #cssmenu li:hover > ul > li {
+    height: auto;
+  }
+  #cssmenu ul li a {
+    width: 100%;
+    border-bottom: 0;
+  }
+  #cssmenu ul ul {
+    position: relative;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    text-align: left;
+  }
+  #cssmenu ul ul li {
+    background: #333 !important;
+  }
+  #cssmenu ul ul li a {
+    width: 100%;
+    border-bottom: 0;
+    padding-left: 25px;
+  }
+  #cssmenu ul ul li:hover {
+    background: #363636 !important;
+  }
+  #cssmenu ul ul ul li a {
+    padding-left: 35px;
+  }
+  #cssmenu ul ul li a {
+    color: #ddd;
+    background: none;
+  }
+  #cssmenu ul ul li:hover > a, #cssmenu ul ul li.active > a {
+    color: #fff;
+  }
+  #cssmenu ul ul ul {
+    position: relative;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    text-align: left;
+  }
+  #cssmenu ul ul > li.has-sub > a:after, #cssmenu ul ul > li.has-sub > a:before {
+    display: none;
+  }
+  #cssmenu > ul > li {
+    float: none;
+  }
+  #cssmenu > ul > li.has-sub > a:after, #cssmenu > ul > li.has-sub > a:before {
+    display: none;
+  }
+  #cssmenu #head-mobile {
+    display: block;
+    padding: 23px;
+    color: #ddd;
+    font-size: 12px;
+    font-weight: 700;
+  }
+
+  .button {
+    /*width: 55px; */
+    height: 46px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    cursor: pointer;
+    z-index: 12399994;
+  }
+  .button:after {
+    position: absolute;
+    top: 22px;
+    right: 20px;
+    display: block;
+    height: 4px;
+    width: 20px;
+    border-top: 2px solid #dddddd;
+    border-bottom: 2px solid #dddddd;
+    content: "";
+  }
+  .button:before {
+    transition: all 0.1s ease;
+    position: absolute;
+    top: 16px;
+    right: 20px;
+    display: block;
+    height: 2px;
+    width: 20px;
+    background: #ddd;
+    content: "";
+  }
+  .button.menu-opened:after {
+    transition: all 0.1s ease;
+    top: 23px;
+    border: 0;
+    height: 2px;
+    width: 19px;
+    background: #fff;
+    transform: rotate(45deg);
+  }
+  .button.menu-opened:before {
+    top: 23px;
+    background: #fff;
+    width: 19px;
+    transform: rotate(-45deg);
+  }
+
+  #cssmenu .submenu-button {
+    position: absolute;
+    z-index: 99;
+    right: 0;
+    top: 0;
+    display: block;
+    border-left: 1px solid #444;
+    height: 46px;
+    width: 46px;
+    cursor: pointer;
+  }
+  #cssmenu .submenu-button.submenu-opened {
+    background: #262626;
+  }
+  #cssmenu ul ul .submenu-button {
+    height: 34px;
+    width: 34px;
+  }
+  #cssmenu .submenu-button:after {
+    position: absolute;
+    top: 22px;
+    right: 19px;
+    width: 8px;
+    height: 2px;
+    display: block;
+    background: #ddd;
+    content: "";
+  }
+  #cssmenu ul ul .submenu-button:after {
+    top: 15px;
+    right: 13px;
+  }
+  #cssmenu .submenu-button.submenu-opened:after {
+    background: #fff;
+  }
+  #cssmenu .submenu-button:before {
+    position: absolute;
+    top: 19px;
+    right: 22px;
+    display: block;
+    width: 2px;
+    height: 8px;
+    background: #ddd;
+    content: "";
+  }
+  #cssmenu ul ul .submenu-button:before {
+    top: 12px;
+    right: 16px;
+  }
+  #cssmenu .submenu-button.submenu-opened:before {
+    display: none;
+  }
+  #cssmenu ul ul ul li.active a {
+    border-left: none;
+  }
+  #cssmenu > ul > li.has-sub > ul > li.active > a, #cssmenu > ul ul > li.has-sub > ul > li.active > a {
+    border-top: none;
+  }
+}/*# sourceMappingURL=main.css.map */
