--- a/view/components/layout.pug
+++ b/view/components/layout.pug
@@ -1,25 +1,21 @@
 doctype html
-html 
+html
   head
-    title MAL
-    meta(name='viewport' content='width=device-width, inital-scale=1')
-    link(rel='stylesheet' type="text/css" href='/assets/css/main.css')
-    script(src="/js/main.js")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
-      
+    title Admin System
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+    meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+    link(rel='stylesheet', type='text/css', href='/css/main.css')
+    base(href="/")
   body
+    block land
     .site
-      .site__header#myHeader
-        .site__header__logo
-          //- a(href="/")
-          //-   img.logo(src="/images/download.png")
-        include nav
-      .site__content
-        .site__content__main
+      .site__header
+        include nav.pug
+        if loggedIn
+          p.user #{name} #{last}
+          p.user #{role}:
+        != messages('messages', locals)
+      .site__content(onclick = "close()")
         block content
-      //- .site__footer
-      //-   p &#9400; Developer
-        
+      .site__footer
 
-
-    
