--- a/view/components/nav.pug
+++ b/view/components/nav.pug
@@ -1,8 +1,29 @@
-.navigation
-  ul
-    a(href="/")
-      li.nav Home
-    a(href="/about")
-      li.nav About
-
-
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+script(src="/js/main.js")
+nav#cssmenu
+  #head-mobile
+  .button
+  ul#menu-menu-1.menu
+    if !loggedin
+      li
+        a(href='/login') Login
+    if loggedin
+      li
+        a(href='/about') About
+        ul.sub-menu
+          li
+            a(href='/employees') List
+      li
+        a(href='/') Users 
+      li
+        a(href='/') Timesheets
+      li
+        a(href='/') Timesheets Clocked In
+      li
+        a(href='/') Organization Unit
+      li
+        a(href='/') Job Grade
+      li
+        a(href='/') Leave
+      li
+        a(href='/signout') Sign out
