--- a/view/components/nav.pug
+++ b/view/components/nav.pug
@@ -9,7 +9,7 @@ nav#cssmenu
         a(href='/login') Login
     if loggedin
       li
-        a(href='/display') Images
+        a(href='/display/all') Images
         ul.sub-menu
           li
             a(href='/display/all') All images
