--- a/assets/css/_variables.sass
+++ b/assets/css/_variables.sass
@@ -7,8 +7,13 @@ $blue: rgb(61, 105, 195)
 $highlight-color: #2b2e6b
 $flat-blue: rgb(63, 93, 135)
 $green: #428b41
+$color-white: #ffffff
+$color-black: #252a32
+$color-light: #f1f5f8
+$color-red: #d32f2f
+$color-blue: #148cb8
 
-
+$box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24)
 $color-bg: rgba(#eeeeee, 0.65)
 $color-particle: rgba(218, 218, 218, 0.34)
 $spacing: 2560px
