--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,10 @@ html, body {
   width: 100%;
   font-family: sans-serif;
   background-color: #ebf5fa;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  color: #252a32;
 }
 
 h1 {
@@ -17,6 +21,72 @@ a {
   color: #282936;
 }
 
+.container {
+  max-width: 80rem;
+  width: 100%;
+  padding: 4rem 2rem;
+  margin: 0 auto;
+}
+
+.main .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.main .card {
+  color: #252a32;
+  border-radius: 2px;
+  background: #ffffff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+}
+.main .card-image {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding-top: 70%;
+  background: #ffffff;
+}
+.main .card-image img {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .card-foot {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  background-color: #282936;
+  color: #f9f9ec;
+  min-height: 45px;
+}
+.main .card-foot p {
+  max-width: 50%;
+  float: left;
+  margin: auto 0px auto 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-color: #282936;
+}
+.main .card-foot .icons {
+  float: right;
+  width: 100px;
+  height: auto;
+  background-color: red;
+}
+
+@media only screen and (max-width: 600px) {
+  .main .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+  }
+}
 .site {
   width: 100%;
   height: 100%;
