--- a/view/components/nav.pug
+++ b/view/components/nav.pug
@@ -1,25 +1,21 @@
-script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-script(src="/js/main.js")
-nav#cssmenu
-  #head-mobile
-  .button
-  ul#menu-menu-1.menu
-    if !loggedin
-      li
-        a(href='/login') Login
-    if loggedin
-      li
-        a(href='/display/all') Images
-        ul.sub-menu
-          li
-            a(href='/display/all') All images
-          li
-            a(href='/display/owner') Your images
-          li
-            a(href='/display/shared') Shared images
-          li
-            a(href='/upload') Upload
-      li
-        a(href='/') blank
-      li
-        a(href='/signout') Sign out
+nav.navbar.navbar-expand-lg.navbar-light.bg-light
+  a.navbar-brand(href='#') Home
+  button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
+    span.navbar-toggler-icon
+  #navbarNavDropdown.collapse.navbar-collapse
+    ul.navbar-nav
+      if !loggedin
+        li.nav-item
+          a.nav-link(href='/login') Login
+      if loggedin
+        li.nav-item.dropdown
+          a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='http://example.com' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
+            | Images
+          .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
+            a.nav-link(href='/display/all') All images
+            a.nav-link(href='/display/owner') Your images
+            a.nav-link(href='/display/shared') Shared images 
+        li.nav-item
+          a.nav-link(href='/upload') Upload
+        li.nav-item
+          a.nav-link(href='/signout') Sign out
